@@ -46,7 +46,7 @@ v3.0-git
 v2.3.6-cvs
 ----------
 
-
+[jan] Export recurrence exceptions in a more portable way.
 
 
 ------
